--- a/tldr/old/rag/dartboard.ipynb
+++ b/tldr/old/rag/dartboard.ipynb
@@ -23,21 +23,31 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import pickle\n",
+    "\n",
     "from dotenv import load_dotenv\n",
     "from dartsearch import get_context_with_dartboard\n",
     "from chat_complete import answer_query\n",
     "\n",
+    "from helper_functions import *\n",
+    "from evalute_rag import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load environment variables from a .env file\n",
     "load_dotenv()\n",
+    "\n",
     "# Set the OpenAI API key environment variable (comment out if not using OpenAI)\n",
     "if not os.getenv('OPENAI_API_KEY'):\n",
     "    print(\"Please enter your OpenAI API key: \")\n",
     "    os.environ[\"OPENAI_API_KEY\"] = input(\"Please enter your OpenAI API key: \")\n",
     "else:\n",
-    "    os.environ[\"OPENAI_API_KEY\"] = os.getenv('OPENAI_API_KEY')\n",
-    "\n",
-    "from helper_functions import *\n",
-    "from evalute_rag import *"
+    "    os.environ[\"OPENAI_API_KEY\"] = os.getenv('OPENAI_API_KEY')"
    ]
   },
   {
@@ -121,9 +131,16 @@
    "outputs": [],
    "source": [
     "# Test a basic way to save the embedding locally\n",
-    "import pickle \n",
-    "with open(f\"{merged}.pkl\", \"wb\") as f: \n",
-    "    pickle.dump(vector_library, file) "
+    "import pickle\n",
+    "\n",
+    "def save_embedding(embedding, pkl_name):\n",
+    "    \"\"\"Save a vector library locally.\"\"\"\n",
+    "    try:\n",
+    "        with open(f\"{pkl_name}.pkl\", \"wb\") as f: \n",
+    "            pickle.dump(embedding, f)\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred saving embedding: {e}\")\n",
+    "\n"
    ]
   },
   {
@@ -192,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
